fix category on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -1163,9 +1163,6 @@ div[data-poll-type="number"] ul {
     max-width: 370px;
     width: 370px!important;
   }
-  #list-area table.topic-list .category-name {
-    font-size: 18px!important;
-  }
   .banner-block {
     padding: 30px 0 !important;
     width: 90% !important;
